--- a/PushWP8Sample/PushWP8Sample/PushWP8Sample.csproj
+++ b/PushWP8Sample/PushWP8Sample/PushWP8Sample.csproj
@@ -98,6 +98,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Model\PushRequest.cs" />
     <Compile Include="Resources\AppResources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
