pivotal-domenic-curro - Automatic version changes.

--- a/PushWP8Sample/PushWP8Sample/PushWP8Sample.csproj
+++ b/PushWP8Sample/PushWP8Sample/PushWP8Sample.csproj
@@ -150,10 +150,12 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="MSSPush-Base">
+    <Reference Include="MSSPush-Base, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\MSSPush-Base.dll</HintPath>
     </Reference>
-    <Reference Include="MSSPush-WP8">
+    <Reference Include="MSSPush-WP8, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\MSSPush-WP8.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
